--- a/app/units/templates/footer.html
+++ b/app/units/templates/footer.html
@@ -1,6 +1,5 @@
-<footer class="footer mt-auto py-3 bg-body-tertiary">
+<footer class="footer mt-auto py-3 bg-body-tertiary fixed-bottom">
     <div class="container">
-        <span class="text-body-secondary">Place sticky footer content
-            here.</span>
+        <span class="text-body-secondary">Shazia Labs.</span>
     </div>
 </footer>
